<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">State of Uncertainty</string>
    <string name="dashboard">Dashboard</string>
    <string name="newgame">New Game</string>
    <string name="learningmode">Learning Mode</string>
    <string name="statemap">American State Map</string>
    <string name="date_and_time">Date and Time</string>
    <string name="result">Result</string>
    <string name="result_icon">Result icon</string>
    <string name="state">State</string>
    <string name="capital">Capital</string>
    <string name="state_flag">State Flag</string>
    <string name="wikipedia_page">Wikipedia</string>
    <string name="information">Information</string>
    <string name="congrats">Congratulations!</string>
    <string name="your_result">Your result is&#160;</string>
    <string name="additional_congrat1">It is the best result!</string>
    <string name="additional_congrat2">Your result is better than the worth for %s points</string>
    <string name="inf1">This game can help you start to recognize all US states and their flags and capitals.</string>
    <string name="inf2">The game was developed by Matthew Durocher and Irina Salikhova.</string>
    <string name="game_info">Guess what state this flag belongs to by selecting an option below.</string>
    <string name="toolbar_info">Press the play button to try again. The wiki button will open the state\'s wikipedia page</string>
    <string name="start_count">0</string>
    <string name="mode">MODE</string>
    <string name="info">ADDITIONAL</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="here_toast">You are already here</string>
    <string name="dialog_button">Ok</string>
    <string name="learn_info">"Browse information about each state. Press the wiki button to open each state's internet page. "</string>
</resources>